# whisper-CHOREC

./: .gitignore  000000FILTEREDTEST  123test123test.csv  README.md  SNR_OLDTEST_data.csv  pyproject.toml  requirements.txt  run_sctk.sh  sctk  session_df_filtered.csv  session_df_unfiltered.csv
all_data/: Conf_matrix.csv  S07C058M8_2LG.csv  S07C058M8_2LG.json
all_data_output/: All_data.json
avoid_files/: S01C007M1_2LG_f01.TextGrid
avoid_sample_files/S03C010M1/: S03C010M1_1LGPseudo_a01.TextGrid  S03C010M1_1LGPseudo_f01.TextGrid  S03C010M1_1LGPseudo_p01.TextGrid  S03C010M1_1LG_a01.TextGrid  S03C010M1_1LG_f01.TextGrid  S03C010M1_1LG_f02.TextGrid  S03C010M1_1LG_p01.TextGrid  S03C010M1_1LG_p02.TextGrid  S03C010M1_1LG_p03.TextGrid  S03C010M1_2LGPseudo_a01.TextGrid  S03C010M1_2LGPseudo_f01.TextGrid  S03C010M1_2LGPseudo_p01.TextGrid  S03C010M1_2LG_a01.TextGrid  S03C010M1_2LG_f01.TextGrid  S03C010M1_2LG_f01b.TextGrid  S03C010M1_2LG_p01.TextGrid  S03C010M1_AVI1_a01.TextGrid  S03C010M1_AVI1_f01.TextGrid  S03C010M1_AVI1_p01.TextGrid  S03C010M1_AVI2_a01.TextGrid  S03C010M1_AVI2_f01.TextGrid  S03C010M1_AVI2_p01.TextGrid
files_static/: 1LG_words.txt  2LG_words.txt  3+4LG_words.txt
output/: S01C002V1-dataframe.csv  S01C002V1-filtered-dataframe.csv  hyp.csv  hyp_filtered.csv  ref.csv  ref_filtered.csv
output/S01C001M1_1LG/: hyp.csv  ref.csv
output/S01C001M1_1LGPseudo/: hyp.csv  ref.csv
output/S01C001M1_AVI1/: hyp.csv
output/S01C001M1_AVI2/: hyp.csv
output/S01C001M1_AVI3/: hyp.csv
output/S01C002V1_1LG/: hyp.csv  ref.csv
output/S01C002V1_1LGPseudo/: hyp.csv  ref.csv
output/S01C002V1_2LGPseudo/: hyp.csv  ref.csv
output/S01C002V1_3+4LG/: hyp.csv  ref.csv
output/S01C002V1_3+4LGPseudo/: hyp.csv  ref.csv
output/S01C002V1_AVI2/: hyp.csv
output_single/: hyp_filtered.csv
report/: hyp1.trn  hyp1.trn.pra.csv  hyp1.trn.pra.html  hyp1.trn.pra.json  hyp1.trn.pra.md  hyp1.trn.raw  hyp1.trn.sgml  hyp1.trn.sys  ref.trn
src/: align_filtered_dataframe.py  build_unfiltered_dataframe.py  calculate_snr.py  clean_reading_error.py  coltolist.py  compare.py  confusion_matrix.py  constants.py  csvtodataframe.py  cuda.py  extract_text.py  file_path.py  filter_training_set.py  filteredalignment.py  generalisedbasedir.py  get_base_dir_for_generalised_path_unaligned_json.py  get_metrics.py  get_snr_data.py  glob_properties.py  islinux.py  json_load_file.py  participantsession.py  pathing.py  post_error_analysis.py  post_process.py  post_process_confpairs.py  process_confmatrix.py  process_model.py  process_session.py  process_snr_data.py  processunaligned.py  run_all.py  run_from_command_line.py  sctk.py  sctk_align.py  sctk_run_aligned.py  sctkrun.py  test2.py  testing.py  testing2.py  (+4 more)
(+24855 files in other folders)
