[tool.poetry]
name = "wav2vec2chorec"
version = "0.1.0"
description = ""
authors = ["groenhofbram <groenhofbram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jiwer = "^3.0.3"
evaluate = "^0.4.1"
transformers = "^4.38.1"
tgt = "^1.5"
pandas = "^2.2.1"
torch = "^2.2.1"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
scikit-learn = "^1.4.1.post1"
librosa = "^0.10.1"
matplotlib = "^3.8.4"
unidecode = "^1.3.8"
accelerate = "^0.31.0"


[tool.poetry.scripts]
w2v2 = 'src.wav2vec2chorec:main'
sctk_run_unaligned = 'src.sctkrun:main'
w2v2json = 'src.wav2vec2chorecjson:main'
w2v2align = 'src.filteredalignment:main'
sctk_run_aligned = 'src.sctkrun_aligned:main'
conf_mat = 'src.confusion_matrix:main'
run_all = 'src.run_all:main'
rag = 'src.run_all:main_generalised'
SNR = 'src.get_snr_data:main'
metrics = 'src.get_metrics:main'
processmodel = 'src.process_model:main'
adagt = 'src.adagt.run_init:main'
post_process = 'src.post_process:main'
post_process_confpairs = 'src.post_process_confpairs:main'
post_error_analysis = 'src.post_error_analysis:main'

testing = 'src.testing:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

